Tidy up & added -f feature allowing config file to specify node list

--- a/utils/deploy.cfg
+++ b/utils/deploy.cfg
@@ -1,13 +1,29 @@
+############################################################################
+# Configuration file used to specify a discrete list of servers for the    #
+# deploy tool to run against. You must invoke the deploy tool with the     #
+# -f option with this file in place to override the subnet scan behaviour  #
+############################################################################
 
-# Configuration file used to specify a discrete list of servers for the 
-# deploy tool to run against. You must invoke the deploy tool with the 
-# relevant run time option to enable this server list to be used
+[nodes]
+; The nodes section. Use the nodenames parameter to provide a list of servers
+; that will be used as candidate nodes for the gluster cluster. For multiple servers
+; place a server on each line. When listing servers on multiple lines, ensure 
+; the server is indented. You may also use blank lines and additional comments within
+; the server list to make larger lists more readable
 
-# Place this file in the root user's home folder
+; Ensure that the hostname or IP of the machine running gluster-deploy is a member
+; of the nodenames 'list'
 
-[servers]
-server=rhs1-1 				; dns shortnames 
-server=rhs1-2 				; OR
-server=192.168.122.200 		; IP address 
-server=192.168.122.22
+nodenames=rhs1-1 				
+  rhs1-2		 		
+  
+; IP based servers as well as names  
+  		
+  192.168.122.200 				
+  192.168.122.22
+  
+; junk names will be filtered out
+
+  miger.flfld.com
+
 
