brickpath applied to UI if provided in config file

--- a/utils/deploy.cfg
+++ b/utils/deploy.cfg
@@ -27,4 +27,12 @@ nodenames=rhs1-1
   miger.flfld.com
 
 [brick]
+; If the brick provider is LVM, the brickpath will be used as follows
+;   - 1st level will be used for the volume group name
+;   - 2nd level for the LVname
+; e.g. /gluster/brick1 will create a VG called gluster, and an LV 
+;                      called brick1 on each node
+;
+; NB if this is not provided, the default defined in the globalvars module
+;    will be used.
 brickpath=/gluster/brick1
