config file provides lv and vg defaults to the UI

--- a/utils/deploy.cfg
+++ b/utils/deploy.cfg
@@ -36,3 +36,5 @@ nodenames=rhs1-1
 ; NB if this is not provided, the default defined in the globalvars module
 ;    will be used.
 brickpath=/gluster/brick1
+vgname=gluster
+lvname=gluster
