new raid related variables added

--- a/utils/deploy.cfg
+++ b/utils/deploy.cfg
@@ -38,3 +38,12 @@ nodenames=rhs1-1
 brickpath=/gluster/brick1
 vgname=gluster
 lvname=gluster
+;
+; The following parameters allow the raid configuration to be provided
+; to optimise the alignment of the PV and XFS filesystem with the raid group 
+;
+; stripeUnit ... the raid groups strip size with raidstrip (in KB) e.g. 256
+; stripeWidth ... the number of data disks in the raid group e.g. raid6, 10+2 has stripeWidth=10
+stripeUnit=256
+stripeWidth=10
+
